@@ -1,3 +1,7 @@
+2013-08-20  Simon Cook  <simon.cook@embecosm.com>
+
+	* arc-versions.sh: Update branch names to new naming convention.
+
 2013-03-27  Anton Kolesov <anton.kolesov@synopsys.com>
 
 	* build-uclibc.sh: Ignore error which happens when running 'make
